# oscilloscope_graphics

./: Cargo.toml  flake.nix
src/: lib.rs  linedraw.rs  main.rs
src/signal/: mod.rs  player.rs  waveforms.rs
src/vgdl/: mod.rs
src/vgdl/commands/: col.rs  define.rs  draw.rs  load.rs  mod.rs  movec.rs  row.rs  scale.rs  sequence.rs  text.rs
